# raytracer

./: .gitignore  Bareme.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LOGDEBUG  Makefile  README.md  Ray Tracer Dec 3.excalidraw  compile_commands.json  flake.nix  fractal.cfg  prout  scene_fractal.cfg  scene_star_wars.cfg  utils.mk  warning_flags.txt
.github/workflows/: ci.yml
Exemple/: s.cfg  scene.cfg
include/: CmdConfig.hpp  IMaterials.hpp  IShape.hpp  Load.hpp  Object.hpp  RayTracer.hpp  Scene.hpp  TextureManager.hpp  bvh.hpp  math3d.hpp  render.hpp
include/CmdConfig/: CmdConfig.hpp
include/CmdParser/: BindField.tpp  ParserCmd.hpp
include/Graphical/: Load.hpp  TextureManager.hpp
include/Math3d/: math3d.hpp
include/Plugin/: LoadedPlugin.hpp  PluginManager.hpp
include/PluginInterface/: IMaterials.hpp  IShape.hpp  Object.hpp
include/RayTracer/: RayTracer.hpp
include/Render/: render.hpp
include/Scene/: Scene.hpp
include/bvh/: bvh.hpp
include/logger/: logger.hpp
plugin/IShape/: IShape.hpp
src/: main.cpp
src/Cluster/: ClusterProtocol.hpp  ClusterServer.cpp  ClusterServer.hpp  ClusterSlave.cpp  ClusterSlave.hpp
src/CmdParser/: BindField.tpp  BuildConfig.cpp  CmdConfig.hpp  CmdParser.cpp  Constructor.cpp  InitParser.cpp  ParserCmd.hpp  ShowConfig.cpp
src/Factory/: MaterialFactory.cpp  ShapeFactory.cpp
src/Graphical/: Headless.hpp  IGraphical.hpp  Ppm.cpp  Ppm.hpp  Sfml.cpp  Sfml.hpp
src/Gui/: gui.cpp
src/Light/: Ambiant.hpp  Area.hpp  Directionnal.hpp  ILight.hpp  LightFactory.cpp
src/Load/: constructor.cpp  graphicLoad.cpp
src/Material/: Chrome.cpp  Chrome.hpp  Default.cpp  Default.hpp  Glass.cpp  Glass.hpp  IMaterials.hpp  Material.cpp  MaterialFactory.cpp  MaterialRegistry.cpp  MaterialRegistry.hpp  Mirror.cpp  Mirror.hpp  Perso.cpp  default.cpp  material.cpp  mirror.cpp
src/Object/: Object.cpp  Object.hpp  object.cpp
src/Plugin/: object.cpp
test/: generator.py
(+73 files in other folders)
